# video-downloader-uploader

./: .env.example  .gitignore  Licence  README.md  pyproject.toml  pytest.ini  requirements.txt  vdu.spec
src/: auth.py  config.py  downloader.py  gui.py  logger.py  main.py  settings_dialog.py  uploader.py
tests/: test_auth.py  test_config.py  test_downloader.py  test_gui.py  test_integration.py  test_logger.py  test_main.py  test_pipeline.py  test_settings_dialog.py  test_uploader.py
