[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "video-downloader-uploader"
version = "2.1.0"
description = "Десктопное приложение для скачивания видео и загрузки в облачные хранилища (Google Drive, Яндекс.Диск)."
authors = [
  { name = "Alex N", email = "aleks@example.com" },
]
license = { file = "Licence" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]
dependencies = [
    "yt-dlp~=2024.7.25",
    "google-api-python-client~=2.137.0",
    "google-auth-oauthlib~=1.2.0",
    "google-auth-httplib2~=0.2.0",
    "python-slugify~=8.0.4",
    "python-dotenv~=1.0.1",
    "pydantic~=2.8.2",
    "pydantic-settings~=2.3.4",
    "PySide6~=6.9.1",
    "requests~=2.32.3",
    "httpx~=0.27.0",
    "tenacity~=8.5.0",
    "yadisk~=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.2.2",
    "pytest-qt~=4.4.0",
    "pyinstaller~=6.14.1",
    "pip-audit~=2.9.0",
    "pytest-cov~=5.0.0",
]

[project.scripts]
vdu-cli = "src.main:main"
vdu-gui = "src.gui:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "asyncio",
    "integration",
]
filterwarnings = [
    "ignore:coroutine '.*' was never awaited:RuntimeWarning",
]